--- a/report.tex
+++ b/report.tex
@@ -246,8 +246,12 @@ NVIDIA. \emph{CUDA C++ Programming Guide} (CUDA Toolkit Documentation). URL:
 \end{thebibliography}
 
 
+
+
+
+
 \appendix 
-\section*{Appendix:\ \ Full 32--1000 performance results}
+\section*{Appendix A:\ \ Full 32--1000 performance results}
 
 Table~\ref{tab:sweep_32_1000} reports the full sweep results discussed in Sections 2--3
 (A100 full GPU, mean SU/s, mode \(1\)).
@@ -282,6 +286,76 @@ Shape & CPU SU/s & CUDA SU/s & OpenMP SU/s & OpenMP/CUDA \\
 \caption{Full 32--1000 sweep results (mean SU/s, mode \(1\)).}
 \label{tab:sweep_32_1000}
 \end{table}
+
+
+\newpage
+
+
+\section*{Appendix:\ \ Full results by kernel mode}
+
+Table~\ref{tab:full_sweep_modes} reports the full sweep results across all tested shapes and kernel modes
+(A100 full GPU, mean SU/s).
+
+\begin{table}[!htbp]
+\centering
+\renewcommand{\arraystretch}{0.92}
+\setlength{\tabcolsep}{4pt}
+\begin{tabular}{lcrrrr}
+\toprule
+Shape & Mode & CPU SU/s & CUDA SU/s & OpenMP SU/s & OpenMP/CUDA \\
+\midrule
+\(32^3\) & 1 & \(3.45\times 10^{8}\) & \(6.54\times 10^{9}\) & \(2.31\times 10^{9}\) & \(0.35\) \\
+\(32^3\) & 2 & \(3.29\times 10^{8}\) & \(3.63\times 10^{9}\) & \(1.18\times 10^{9}\) & \(0.32\) \\
+\(32^3\) & 3 & \(2.98\times 10^{8}\) & \(2.60\times 10^{9}\) & \(7.96\times 10^{8}\) & \(0.31\) \\
+\(64^3\) & 1 & \(3.37\times 10^{8}\) & \(3.04\times 10^{10}\) & \(1.42\times 10^{10}\) & \(0.47\) \\
+\(64^3\) & 2 & \(3.40\times 10^{8}\) & \(2.08\times 10^{10}\) & \(8.02\times 10^{9}\) & \(0.39\) \\
+\(64^3\) & 3 & \(3.43\times 10^{8}\) & \(1.63\times 10^{10}\) & \(5.73\times 10^{9}\) & \(0.35\) \\
+\(96^3\) & 1 & \(3.36\times 10^{8}\) & \(5.19\times 10^{10}\) & \(2.85\times 10^{10}\) & \(0.55\) \\
+\(96^3\) & 2 & \(3.60\times 10^{8}\) & \(4.09\times 10^{10}\) & \(1.97\times 10^{10}\) & \(0.48\) \\
+\(96^3\) & 3 & \(3.78\times 10^{8}\) & \(3.53\times 10^{10}\) & \(1.54\times 10^{10}\) & \(0.44\) \\
+\(128^3\) & 1 & \(3.03\times 10^{8}\) & \(4.64\times 10^{10}\) & \(3.52\times 10^{10}\) & \(0.76\) \\
+\(128^3\) & 2 & \(3.05\times 10^{8}\) & \(4.26\times 10^{10}\) & \(2.67\times 10^{10}\) & \(0.63\) \\
+\(128^3\) & 3 & \(3.17\times 10^{8}\) & \(3.96\times 10^{10}\) & \(2.45\times 10^{10}\) & \(0.62\) \\
+\(160^3\) & 1 & \(2.84\times 10^{8}\) & \(4.80\times 10^{10}\) & \(4.06\times 10^{10}\) & \(0.85\) \\
+\(160^3\) & 2 & \(3.03\times 10^{8}\) & \(4.60\times 10^{10}\) & \(3.24\times 10^{10}\) & \(0.70\) \\
+\(160^3\) & 3 & \(2.86\times 10^{8}\) & \(4.43\times 10^{10}\) & \(3.17\times 10^{10}\) & \(0.72\) \\
+\(192^3\) & 1 & \(2.87\times 10^{8}\) & \(4.94\times 10^{10}\) & \(4.34\times 10^{10}\) & \(0.88\) \\
+\(192^3\) & 2 & \(2.81\times 10^{8}\) & \(4.81\times 10^{10}\) & \(3.61\times 10^{10}\) & \(0.75\) \\
+\(192^3\) & 3 & \(2.96\times 10^{8}\) & \(4.71\times 10^{10}\) & \(3.76\times 10^{10}\) & \(0.80\) \\
+\(224^3\) & 1 & \(2.83\times 10^{8}\) & \(5.13\times 10^{10}\) & \(4.62\times 10^{10}\) & \(0.90\) \\
+\(224^3\) & 2 & \(2.94\times 10^{8}\) & \(5.02\times 10^{10}\) & \(3.90\times 10^{10}\) & \(0.78\) \\
+\(224^3\) & 3 & \(2.90\times 10^{8}\) & \(4.98\times 10^{10}\) & \(4.18\times 10^{10}\) & \(0.84\) \\
+\(256^3\) & 1 & \(2.90\times 10^{8}\) & \(5.21\times 10^{10}\) & \(4.76\times 10^{10}\) & \(0.91\) \\
+\(256^3\) & 2 & \(2.99\times 10^{8}\) & \(5.15\times 10^{10}\) & \(4.08\times 10^{10}\) & \(0.79\) \\
+\(256^3\) & 3 & \(2.73\times 10^{8}\) & \(5.15\times 10^{10}\) & \(4.51\times 10^{10}\) & \(0.88\) \\
+\(320^3\) & 1 & \(1.30\times 10^{8}\) & \(5.27\times 10^{10}\) & \(4.86\times 10^{10}\) & \(0.92\) \\
+\(320^3\) & 2 & \(1.29\times 10^{8}\) & \(5.22\times 10^{10}\) & \(3.74\times 10^{10}\) & \(0.72\) \\
+\(320^3\) & 3 & \(1.25\times 10^{8}\) & \(5.26\times 10^{10}\) & \(4.76\times 10^{10}\) & \(0.90\) \\
+\(384^3\) & 1 & \(2.68\times 10^{8}\) & \(5.26\times 10^{10}\) & \(4.95\times 10^{10}\) & \(0.94\) \\
+\(384^3\) & 2 & \(2.69\times 10^{8}\) & \(5.30\times 10^{10}\) & \(4.34\times 10^{10}\) & \(0.82\) \\
+\(384^3\) & 3 & \(2.96\times 10^{8}\) & \(5.37\times 10^{10}\) & \(4.95\times 10^{10}\) & \(0.92\) \\
+\(512\times 64\times 512\) & 1 & \(3.00\times 10^{8}\) & \(5.10\times 10^{10}\) & \(4.66\times 10^{10}\) & \(0.91\) \\
+\(512\times 64\times 512\) & 2 & \(2.96\times 10^{8}\) & \(5.02\times 10^{10}\) & \(3.95\times 10^{10}\) & \(0.79\) \\
+\(512\times 64\times 512\) & 3 & \(3.04\times 10^{8}\) & \(4.87\times 10^{10}\) & \(4.27\times 10^{10}\) & \(0.88\) \\
+\(640\times 64\times 640\) & 1 & \(2.74\times 10^{8}\) & \(5.20\times 10^{10}\) & \(4.77\times 10^{10}\) & \(0.92\) \\
+\(640\times 64\times 640\) & 2 & \(2.56\times 10^{8}\) & \(5.14\times 10^{10}\) & \(4.06\times 10^{10}\) & \(0.79\) \\
+\(640\times 64\times 640\) & 3 & \(2.82\times 10^{8}\) & \(5.02\times 10^{10}\) & \(4.49\times 10^{10}\) & \(0.89\) \\
+\(768\times 64\times 768\) & 1 & \(2.74\times 10^{8}\) & \(5.27\times 10^{10}\) & \(4.70\times 10^{10}\) & \(0.89\) \\
+\(768\times 64\times 768\) & 2 & \(2.65\times 10^{8}\) & \(5.22\times 10^{10}\) & \(4.15\times 10^{10}\) & \(0.79\) \\
+\(768\times 64\times 768\) & 3 & \(2.58\times 10^{8}\) & \(5.14\times 10^{10}\) & \(4.68\times 10^{10}\) & \(0.91\) \\
+\(896\times 64\times 896\) & 1 & \(2.72\times 10^{8}\) & \(5.30\times 10^{10}\) & \(4.89\times 10^{10}\) & \(0.92\) \\
+\(896\times 64\times 896\) & 2 & \(2.71\times 10^{8}\) & \(5.28\times 10^{10}\) & \(4.21\times 10^{10}\) & \(0.80\) \\
+\(896\times 64\times 896\) & 3 & \(2.72\times 10^{8}\) & \(5.10\times 10^{10}\) & \(4.69\times 10^{10}\) & \(0.92\) \\
+\(1000\times 64\times 1000\) & 1 & \(2.72\times 10^{8}\) & \(5.32\times 10^{10}\) & \(4.91\times 10^{10}\) & \(0.92\) \\
+\(1000\times 64\times 1000\) & 2 & \(2.74\times 10^{8}\) & \(5.28\times 10^{10}\) & \(3.84\times 10^{10}\) & \(0.73\) \\
+\(1000\times 64\times 1000\) & 3 & \(2.77\times 10^{8}\) & \(5.25\times 10^{10}\) & \(4.83\times 10^{10}\) & \(0.92\) \\
+\bottomrule
+\end{tabular}
+\caption{Full sweep results by kernel mode (mean SU/s).}
+\label{tab:full_sweep_modes}
+\end{table}
+
+
 
 
 
